# Pokemon

./: CAL_FLOW.md  CLASS.md  Damage calculation formula.md  Damage_calculation_formula.md  MEMO.md  README.md  ability.json  app.py  instructions.txt  json_adding.ipynb  main.py  move.json  pokeapi.py  pokemon_champions.db  pyproject.toml  ruff.toml  temporary.py  test.toml
GUI/: field_panel.py  main_window.py  panel_logic.py  pokemon_panel.py  result_panel.py  style.qss
JSON/: ability.json  pokemon.json
POKEMON/: __init__.py  factory.py  getting_img.py  instance.py  make_option.py  manager.py
battle/: battle_fieldstate.py  battle_manager.py  damage_calculater.py  damage_calculator.py  instance_making.py  party_manager_cui.py  party_manager_logic.py  pokeeditor_logic.py
buildDB/: build_ability_basicdata.py  build_all.py  build_move_basicdata.py  build_move_detail.py  build_nature.py  build_pokemon_move.py  build_pokemon_st.py  build_types.py  getting_img.py
field/: __init__.py  state.py
party/: 0.toml  test1.toml  test2.toml
python/: temporary.py
static/css/: style.css
static/js/: script.js
templates/: index.html
