[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "logging>=0.4.9.6",
    "numpy>=2.5.1",
    "pyside6>=6.11.1",
    "requests>=2.34.2",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
]
